# DeepCorr

./: .gitignore  Cargo.toml  README.md
R/: test1.R
bindings/R/: DESCRIPTION  NAMESPACE  commands.txt
bindings/R/R/: deepcorr.R  extendr-wrappers.R
bindings/R/src/: Makevars  Makevars.in  Makevars.win.in  deepcorr-win.def  entrypoint.c
bindings/R/src/rust/: Cargo.toml
bindings/R/src/rust/src/: lib.rs
bindings/python/deepcorr/: helper.txt
crates/clustering/: Cargo.toml
crates/clustering/src/: lib.rs
crates/dcca-engine/: Cargo.toml
crates/dcca-engine/src/: lib.rs  tensors.rs
crates/normalization/: Cargo.toml  README.md
crates/normalization/src/: cosine.rs  lib.rs  min_max.rs  z_score.rs
