[package]
name = "deep-cca"
version = "0.1.0"
authors = ["Harry Woodhouse <harry@harrywstephen.com>"]
edition = "2021"
description = "Lower level crate for DeepCorr which handles Deep Canonical Correlation Analysis (DCCA). Can be used standalone too. "
license = "GPL-3.0-or-later"
repository = "https://github.com/mosaic-rs/DeepCorr"
readme = "README.md"
keywords = ["dcca", "normalization", "mosaic", "speech", "math"]
categories = ["science", "mathematics", "data-structures"]

[dependencies]
burn = { version = "0.20.0", features = ["train", "wgpu"] } 
nalgebra = { version = "0.32", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
deepcorr-normalization = { path = "../normalization" }